--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,5 +1,5 @@
 .intro {
-  background-image: url("http://resource.ferozo.net/tacuifi/tacuifi/1.jpg");
+  background-image: url("/tacuifi/1.jpg");
 }
 
 .text-shadow-black{
